package Appliances;

public class Recess {
    private boolean stuckOut;

    public Recess() {

    }

    public boolean isStuckOut() {
        return stuckOut;
    }

    public void setStuckOut(boolean stuckOut) {
        this.stuckOut = stuckOut;
    }


    @Override
    public int hashCode() {
        return super.hashCode();
    }

    @Override
    public boolean equals(Object obj) {
        return super.equals(obj);
    }

    @Override
    public String toString() {
        return super.toString();
    }
}

