package RootOfModel;

public interface Blinkeable {
    void blink() throws InterruptedException;
}
