package RootOfModel;

public enum CoffeeTypes {
    CAPPUCCINO, AMERICANO, LATTE, EXPRESSO
}
