package RootOfModel;

public interface Occupyable {
    void occupy();
}
