package RootOfModel;

public interface Onable {
    void toggleSwitch();
}
