package RootOfModel;

public enum Position {
    MANAGER, CHEF, BARMAN, WAITER, WAITRESS, RECEPTIONIST
}
