package RootOfModel;

public interface Ringeable {
    void ring() throws InterruptedException;
}
